First Commit of MeuApp

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,11 +1,12 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      About
+      Sobre
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-
+  <h2>MeuApp</h2>
+  <p>MeuApp é uma aplicação desenvovida por Rafael Filho.</p>
 </ion-content>
