--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,17 +1,29 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Contact
+      Contato
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
   <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
+    <ion-list-header><h2>Siga-nos nas redes sociais</h2></ion-list-header>
     <ion-item>
-      <ion-icon name="ionic" item-start></ion-icon>
-      @ionicframework
+      <ion-icon name="logo-twitter" item-start></ion-icon>
+      @rafaelfilholm
+    </ion-item>
+    <ion-item>
+      <ion-icon name="logo-linkedin" item-start></ion-icon>
+      @rafaelfilholm
+    </ion-item>
+    <ion-item>
+      <ion-icon name="logo-github" item-start></ion-icon>
+      @rafaelfilholm
+    </ion-item>
+    <ion-item>
+      <ion-icon name="logo-instagram" item-start></ion-icon>
+      @fael.filho
     </ion-item>
   </ion-list>
 </ion-content>
