--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,13 +5,9 @@
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
+  <h2>Bem Vindo ao MeuApp</h2>
+  <p>MeuApp é uma aplicação desenvovida por Rafael Filho.</p>
   <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
+    Siga-nos nas redes sociais usando o nome de usuário <code>@rafaelfilholm</code>
   </p>
 </ion-content>
